--- a/src/app/view/main/Carousel.module.css
+++ b/src/app/view/main/Carousel.module.css
@@ -529,7 +529,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(239, 53, 246, 0.5); /* Pink with 50% opacity */
+  background-color: #ef35f680; 
   opacity: 0;
   transition: opacity 0.3s ease;
   z-index: 1;
