--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -134,3 +134,13 @@
   
   } 
 }
+
+
+
+
+.imageChannel{
+  border: 1.5px solid rgb(223, 222, 222);
+}
+.smallimage{
+  border: 1.5px solid rgb(223, 222, 222);
+}
