--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -80,11 +80,25 @@
     color: gray;
     text-decoration: none;
   }
+
+
+
   .navmenu{
     display: inline-block;
   }
   .navmenu:hover{
     border-bottom: 1px solid black;
+  }
+
+  .navmenu2{
+    display: inline-block;
+    font-size: 13px;
+  }
+  .navmenu:hover{
+    border-bottom: 1px solid black;
+  }
+  .follow{
+    font-size: 11px;
   }
 
   @media only screen and (max-width: 900px) and (min-width: 0px) {
@@ -144,3 +158,4 @@
 .smallimage{
   border: 1.5px solid rgb(223, 222, 222);
 }
+
