--- a/src/app/view/Lifestyle/lifestyle.module.css
+++ b/src/app/view/Lifestyle/lifestyle.module.css
@@ -1,293 +1,529 @@
-/* LAYOUT 2 */
-
-
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Kaisei+Opti&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Playwrite+HR:wght@100..400&display=swap');
 
 @font-face {
-  font-family: 'ABCMonumentGroteskRegular';
-  src: url('../../../public/fonts/ABCMonumentGrotesk-Regular.woff') format('woff');
-  font-weight: normal; /* or specify 'bold' if applicable */
-  font-style: normal; /* or specify 'italic' if applicable */
-}
-
-@font-face {
-  font-family: 'Light';
-  src: url('../../../public/fonts/Rhymes\ Display\ Light.woff') format('woff');
-  font-weight: normal; 
-  font-style: normal; 
-}
-
-@font-face {
-  font-family: 'Text';
-  src: url('../../../public/fonts/RhymesTextLight.woff') format('woff');
-  font-weight: normal; /* or specify 'bold' if applicable */
-  font-style: normal; 
-}
-
-
-
-.Layout2 {
-  display: flex;
-  margin: 0px 2em;
-  justify-content: space-between;
-  align-items: center;
-
-}
-
-.Layout2Box {
-  margin: 0px 2em 4em 2em;
-}
-
-@media only screen and (max-width: 900px) and (min-width: 0px) {
-  .Layout2Box {
-    margin: 0px 0.9em;
+    font-family: 'ABCMonumentGroteskRegular';
+    src: url('../../../public/fonts/ABCMonumentGrotesk-Regular.woff') format('woff');
+    font-weight: normal; /* or specify 'bold' if applicable */
+    font-style: normal; /* or specify 'italic' if applicable */
   }
-  .imageLayout2 {
-    height: 11em;
-    width: 100%;
-  }
-}
-
-
-
-.imageLayout2 {
-  border-radius: 20px;
-}
-
-.viewallbutton {
-  background-color: #000;
-  padding: 15px 20px;
-  border-radius: 30px;
-  text-transform: uppercase;
-  font-family: ABC Monument Grotesk, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
-  font-size: 13px;
-  font-weight: 500;
-}
-
-.viewallbutton:hover {
-  background-color: #fff;
-  border: 1px solid black;
-  color: #000;
-}
-
-.Layout2text {
-  /* font-size: 5em; */
-  color: #000 !important;
-
-  font-family: 'Text', serif ;
-
-  font-weight: 200;
-  letter-spacing: -.04em;
-}
-
-.layout2con {
-  /* margin: 0px 10px; */
-  padding: 0px 10px;
-}
-
-@media only screen and (max-width: 900px) and (min-width: 0px) {
-  .Layout2 {
-
-    margin: 0px 1em;
-    margin-top: 1em;
-
-
-  }
-
-  .layout2con {
-    padding: 0px 10px;
-  }
-}
-
-@media (min-width: 240px) {
-  .Layout2text {
-    font-size: 2.55em;
-    color: green;
-    /* Font size for small screens (640px and up) */
-  }
-}
-
-
-@media (min-width: 640px) {
-  .Layout2text {
-    font-size: 28px;
-    color: red;
-    /* Font size for small screens (640px and up) */
-  }
-}
-
-@media (min-width: 768px) {
-  .Layout2text {
-    font-size: 42px;
-    color: pink;
-    /* Font size for medium screens (768px and up) */
-  }
-}
-
-@media (min-width: 1024px) {
-  .Layout2text {
-    font-size: 66px;
-    /* color: blue; */
-
-  }
-}
-
-.Layout2Boxbutton {
-  margin-top: 18px;
-  border: 1px solid rgb(224, 223, 223);
-  border-radius: 20px;
-  padding: 5px 15px;
-  font-size: 13px;
-  color: #000;
-  text-transform: uppercase;
-
-
-}
-
-.Layout2imageText {
-  color: #000 !important;
-  font-family: Light;
-  /* font-weight: bold; */
   
-  line-height: 1.0em;
-  margin-top: 10px;
-  margin-left: 4px;
-}
-
-@media (min-width: 240px) {
-  .Layout2imageText {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-    font-weight: 300;
-    line-height: 110%;
-    letter-spacing: -.03em;
-    /* Font size for small screens (640px and up) */
+  @font-face {
+    font-family: 'Light';
+    src: url('../../../public/fonts/Rhymes\ Display\ Light.woff') format('woff');
+    font-weight: normal; 
+    font-style: normal; 
   }
-}
-
-
-@media (min-width: 640px) {
-  .Layout2imageText {
-    font-size: 28px;
-    color: red;
-    /* Font size for small screens (640px and up) */
+  
+  @font-face {
+    font-family: 'Text';
+    src: url('../../../public/fonts/RhymesTextLight.woff') format('woff');
+    font-weight: normal; /* or specify 'bold' if applicable */
+    font-style: normal; 
   }
+/* .buttonDetailsText{
+    border: 1px solid rgb(224, 223, 223);
+    border-radius: 20px;
+    padding: 8px 14px;
+    font-size: 18px;
+    color: #000;
+    text-transform: uppercase;
+    font-weight: 500;
 }
-
-@media (min-width: 768px) {
-  .Layout2imageText {
-    font-size: 22px;
-    color: pink;
-    /* Font size for medium screens (768px and up) */
-  }
+.buttonDetailsText:hover{
+   background-color: #000;
+    border-radius: 20px;
+    padding: 8px 14px;
+    font-size: 18px;
+    color: white;
+    text-transform: uppercase;
+    font-weight: 500;
 }
+.detailsTitle{
+    color: #000 !important;
+    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+    font-weight: 500;
+    margin-top: 10px;
+    margin-left: 4px;
+    font-size: 4rem;
+    width: 50%;
+    line-height: 1;
+    margin-bottom: 10px;
 
-@media (min-width: 1024px) {
-  .Layout2imageText {
-    font-size: 30px;
-    color: blue;
-
-  }
-}
-
-
-
-
-
-
-
-.navmenu{
-  display: inline-block;
-}
-.navmenu:hover{
-  border-bottom: 1px solid black;
-}
-
-@media only screen and (max-width: 900px) and (min-width: 0px) {
-  .imageBrandName{
-  position: relative ;
-  top:7px ;
-
- 
-  }
-  .shrink {
-    width: 200px; /* Shrinks to 10px on scroll */
    
-  }
 }
-@media only screen and (max-width: 3900px) and (min-width: 901px) {
-  .shrink {
-    width: 200px; /* Shrinks to 10px on scroll */
-    position: relative;
-    left:-60px;
-  }
-  .brandImage {
-    width: 260px; /* You can adjust the width as needed */
-    height: auto;
-    position: relative;
-    left:-60px;
-  
-  
-  
-  }
-  
-  
+.dateDetails{
+    color: #000 !important;
+    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+    font-weight: 500;
+    margin-top: 5px;
+    margin-left: 4px;
+    margin: 0px 250px;
+}
+.imageDetails{
+    width: 50%;
+    border-radius: 20px;
+}
+.imageName{
+    color: #d2d2d2 !important;
+    font-weight: 500;
+    
+    
+   
+   
+}
+.descriptionTitle{
+    color: #000 !important;
+    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+    font-weight: 100;
+    margin-top: 30px;
+    margin-left: 4px;
+    font-size: 1.3em;
+   
+    width: 50%;
+
+   
+
+}
+.UnderlineText{
+    color: #000 !important;
+    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+    font-weight: 100;
+    margin-top: 0px;
+    margin-left: 4px;
+    font-size: 1.3em;
+   
+    width: 50%;
+
+    margin-bottom: 25px;
+
+
+    text-decoration: underline;        
+    text-decoration-thickness: 2px;   
+    text-underline-offset: 2px;       
+
+    padding-bottom: 2px;               
+ 
+
 }
 
+.UnderlineText2{
+    color: #2f2e2e !important;
+    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+    font-weight: 100;
+    margin-top: 30px;
+    margin-left: 4px;
+    font-size: 1.3em;
+    
+    width: 50%;
+
+    margin-bottom: 10px;
 
 
-.smaller-brand {
-  max-width: 150px; /* Adjust the size as needed */
+    text-decoration: underline;        
+    text-decoration-thickness: 2px;   
+    text-underline-offset: 2px;        
+   
+    padding-bottom: 2px;               
+}
+.shareText{
+    color: #000 !important;
+     font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif; 
+    font-weight: 100;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 4px;
+    font-size: 1.3em;
+   
+    width: 50%;
+    letter-spacing: -.03em;
+
+}
+.buttonicon{
+    border: 1.3px solid rgb(179, 176, 176);
+    padding: 13px;
+    border-radius: 16px;
+    color: black;
+
+}
+.icon{
+font-size: 20px;
+
+
+}
+.buttonicon:hover{
+    background-color: #000;
+    color: white;
+   
+}
+.buttoncontenet{
+    border: 1.7px solid rgb(12, 12, 12);
+    padding: 5px 13px;
+    border-radius: 20px;
+    color: black;
+    font-size: 12px;
+    font-weight: 500;
+}
+.buttoncontenet:hover{
+    border: 1.7px solid rgb(12, 12, 12);
+   background-color: #000;
+    color: white;
+
+} */
+
+
+
+
+.buttonDetailsText{
+    border: 1px solid rgb(224, 223, 223);
+    border-radius: 20px;
+    padding: 5px 12px;
+    /* font-size: 18px; */
+    color: #000;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-family: 'ABCMonumentGroteskRegular' , 'serif';
 }
 
-
-
-
-@media only screen and (max-width: 900px) and (min-width: 0px) {
-.brandImage {
-  width: 200px; /* You can adjust the width as needed */
-  height: auto;
-
-} 
-}
-
-
-
-
-
-
-
-
-
-@media only screen and (max-width: 900px) and (min-width: 0px) {
-  .web{
-    display: none;
-  }
-  .mobile{
-    display: block;
-  }
+.buttonDetailsText:hover{
+    background-color: #000;
+    color: white;
 }
 
 @media only screen and (max-width: 3901px) and (min-width: 901px) {
-  .web{
-    display: block;
-  }
-  .mobile{
-    display: none;
-  }
+    .buttonDetailsText{
+        border: 1px solid rgb(224, 223, 223);
+        border-radius: 20px;
+        padding: 5px 14px;
+        font-size: 15px;
+        color: #000;
+        text-transform: uppercase;
+        font-weight: 500;
+    }
+    .imageDetails{
+        color: #6a7176 !important;
+        font-family: "ABCMonumentGroteskRegular", serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 12px;
+        position: relative;
+        bottom: 40px;
+    
+    
+    }
+}
+@media only screen and (max-width: 900px) and (min-width: 0px) {
+    .buttonDetailsText{
+        border: 1px solid rgb(224, 223, 223);
+        border-radius: 20px;
+        padding: 7px 14px;
+        font-size:14px;
+        color: #000;
+        text-transform: uppercase;
+        font-weight: 500;
+    }
+    .imageDetails{
+        color: #6a7176 !important;
+        font-family: "ABCMonumentGroteskRegular", serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 12px;
+        /* position: relative;
+        bottom: 40px; */
+        margin-top: 10px;
+    
+    
+    }
 }
 
-/* Custom CSS for mobile two-column layout */
-.mobiletwocolumns {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  margin-bottom: 30px;
-  /* gap: 1rem;  */
+.detailsTitle{
+    color: #000 !important;
+    font-family: 'Text', 'serif';
+    font-weight: 500;
+    margin-top: 10px;
+    width: 53%; 
+    line-height: 1;
+    margin-bottom: 10px;
+    letter-spacing: -.04em;
+
+   
 }
 
-/* Optional: Adjust columns for larger screens if needed */
-@media (min-width: 640px) {
-  .mobiletwocolumns {
-      grid-template-columns: repeat(4, 1fr);
+@media only screen and (max-width: 900px) and (min-width: 0px) {
+    .detailsTitle{
+        color: #000 !important;
+       
+        font-weight: 500;
+        margin-top: 10px;
+        width: 100%; 
+        line-height: 1;
+        margin-bottom: 10px;
+        font-size: 2.25rem;
+    
+       
+    }
+}
+
+@media only screen and (max-width: 3901px) and (min-width: 901px) {
+    .detailsTitle{
+        color: #000 !important;
+      font-size: 55px;
+        font-weight: 500;
+        margin-top: 10px;
+        width: 50%; 
+        line-height: 1;
+        margin-bottom: 10px;
+    
+       
+    }
+    .dateDetails{
+        color: #000 !important;
+        font-family: Light, serif;
+        font-weight: 600;
+        font-size: 14px;
+    }
+    
+}
+
+.shareText{
+    color: #000 !important;
+     font-family: 'ABCMonumentGroteskRegular', serif; 
+    font-weight: 100;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 4px;
+    font-size: 1.3em;
+   
+    width: 100%;
+    letter-spacing: -.03em;
+
+}
+
+@media only screen and (max-width: 900px) and (min-width: 0px) {
+    .shareText{
+        color: #000 !important;
+        
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-left: 4px;
+        font-size: 1.3em;
+       
+        width: 100%;
+        letter-spacing: -.03em;
+        
+    
+    }
+    .dateDetails{
+        color: #000 !important;
+        font-family: Light, serif;
+        font-weight: 600;
+        font-size: 14px;
+        margin-top: 14px;
+        margin-bottom: 36px;
+    }
+    
+}
+
+
+
+
+.dateDetails{
+    color: #000 !important;
+    font-family: Light, serif;
+  
+}
+
+.imageDetails{
+    width: 100%; /* Responsive width for smaller screens */
+    border-radius: 20px;
+}
+
+.descriptionTitle{
+    /* color: #000 !important;
+    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+    font-weight: 100;
+    margin-top: 30px;
+    width: 100%;  */
+    color: #444444 !important;
+    font-family: "Light", serif;
+  font-weight: 300;
+  font-style: normal;
+    margin-top: 30px;
+    /* width: 100%;  */
+
+   
+}
+
+@media only screen and (max-width: 900px) and (min-width: 0px) {
+    .descriptionTitle{
+        
+   
+        /* margin-top: 30px;
+     
+        width: 100%;
+        font-size: 24px; */
+
+
+        /* margin-top: 2rem; */
+    /* margin-bottom: 2rem; */
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    font-weight: 300;
+    line-height: 160%;
+    letter-spacing: -.03em;
+    --tw-text-opacity: 1;
+    color: #444;
+    color: rgba(68, 68, 68, var(--tw-text-opacity));
+
+
+
+
+    }
+    .image2Img{
+        margin-top: 30px;
+    }
+}
+
+@media only screen and (max-width: 3901px) and (min-width: 901px) {
+    .descriptionTitle{
+        /* color: #000 !important; */
+        /* font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif; */
+      
+        margin-top: 30px;
+        /* width: 100%;  */
+        width: 50%;
+        font-size: 21px;
+    }
+}
+
+
+
+/* .UnderlineText, .UnderlineText2{
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 2px;
+    color: #444;
+    padding-bottom: 20px;
+    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+
+} */
+.UnderlineText{
+   
+    text-decoration-thickness: 2px;
+    text-underline-offset: 2px;
+    color: black;
+    padding-bottom: 20px;
+    font-family: 'Text', serif;
+    font-weight: 600;
+
+}
+.UnderlineText span{
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 2px;
+    color: black;
+    padding-bottom: 20px;
+    font-family: 'Text', serif;
+    font-weight: 600;
+   
+    
+
+}
+.UnderlineText2{
+   
+    text-decoration-thickness: 2px;
+    text-underline-offset: 2px;
+    color: #6A7176;
+    padding-bottom: 20px;
+    font-family: 'ABCMonumentGroteskRegular', serif;
+    margin-top: 10px;
+    /* font-weight: 500; */
+  
+
+
+}
+
+
+
+@media only screen and (max-width: 900px) and (min-width: 0px) {
+    .Layout2Boxbutton {
+      margin-top: 18px;
+      border: 1px solid rgb(224, 223, 223);
+      border-radius: 20px;
+      padding: 5px 13px;
+      font-size: 9px;
+      color: #000;
+      text-transform: uppercase;
+    
+    
+    }
+   
   }
+  @media only screen and (max-width: 3900px) and (min-width: 901px) {
+    .Layout2Boxbutton {
+      margin-top: 18px;
+      border: 1px solid rgb(224, 223, 223);
+      border-radius: 20px;
+      padding: 5px 15px;
+      font-size: 13px;
+      color: #000;
+      text-transform: uppercase;
+    
+    
+    }
+  }
+  
+
+@media only screen and (max-width: 3901px) and (min-width: 901px) {
+    .UnderlineText{ 
+        font-size: 1.145rem;
+        width: 50%;
+    }
+    .UnderlineText2{
+        font-size: 0.95rem;
+        width: 50%;
+    }
 }
 
+@media only screen and (max-width: 900px) and (min-width: 0px) {
+    .UnderlineText{
+       
+        width: 100%;
+        font-size: 1.15rem;
+        line-height: 1.75rem;
+    }
+    .UnderlineText2{
+        width: 100%;
+        font-size: 0.85rem;
+        line-height: 1.75rem;
+    }
+}
+
+.buttonicon{
+    border: 1.3px solid rgb(179, 176, 176);
+    padding: 10px;
+    border-radius: 16px;
+    color: black;
+}
+
+.buttonicon:hover{
+    background-color: #000;
+    color: white;
+}
+
+.icon{
+    font-size: 20px;
+}
+
+.buttoncontenet{
+    border: 1.7px solid rgb(12, 12, 12);
+    padding: 5px 13px;
+    border-radius: 20px;
+    color: black;
+    font-size: 12px;
+    font-weight: 500;
+}
+
+.buttoncontenet:hover{
+    background-color: #000;
+    color: white;
+}
