--- a/src/app/view/Watches/watches.module.css
+++ b/src/app/view/Watches/watches.module.css
@@ -131,17 +131,34 @@
   }
 }
 
-.Layout2Boxbutton {
-  margin-top: 18px;
-  border: 1px solid rgb(224, 223, 223);
-  border-radius: 20px;
-  padding: 5px 15px;
-  font-size: 13px;
-  color: #000;
-  text-transform: uppercase;
-
-
+@media only screen and (max-width: 900px) and (min-width: 0px) {
+  .Layout2Boxbutton {
+    margin-top: 18px;
+    border: 1px solid rgb(224, 223, 223);
+    border-radius: 20px;
+    padding: 5px 13px;
+    font-size: 9px;
+    color: #000;
+    text-transform: uppercase;
+  
+  
+  }
+ 
 }
+@media only screen and (max-width: 3900px) and (min-width: 901px) {
+  .Layout2Boxbutton {
+    margin-top: 18px;
+    border: 1px solid rgb(224, 223, 223);
+    border-radius: 20px;
+    padding: 5px 15px;
+    font-size: 13px;
+    color: #000;
+    text-transform: uppercase;
+  
+  
+  }
+}
+
 
 .Layout2imageText {
   color: #000 !important;
@@ -200,6 +217,17 @@
 }
 .navmenu:hover{
   border-bottom: 1px solid black;
+}
+
+.navmenu2{
+  display: inline-block;
+  font-size: 13px;
+}
+.navmenu:hover{
+  border-bottom: 1px solid black;
+}
+.follow{
+  font-size: 11px;
 }
 
 @media only screen and (max-width: 900px) and (min-width: 0px) {
