--- a/src/app/view/youmaylikeDetails/youmay.module.css
+++ b/src/app/view/youmaylikeDetails/youmay.module.css
@@ -3,27 +3,23 @@
 @font-face {
     font-family: 'ABCMonumentGroteskRegular';
     src: url('../../../public/fonts/ABCMonumentGrotesk-Regular.woff') format('woff');
-    font-weight: normal;
-    /* or specify 'bold' if applicable */
-    font-style: normal;
-    /* or specify 'italic' if applicable */
-}
-
-@font-face {
+    font-weight: normal; /* or specify 'bold' if applicable */
+    font-style: normal; /* or specify 'italic' if applicable */
+  }
+  
+  @font-face {
     font-family: 'Light';
     src: url('../../../public/fonts/Rhymes\ Display\ Light.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
+    font-weight: normal; 
+    font-style: normal; 
+  }
+  
+  @font-face {
     font-family: 'Text';
     src: url('../../../public/fonts/RhymesTextLight.woff') format('woff');
-    font-weight: normal;
-    /* or specify 'bold' if applicable */
-    font-style: normal;
-}
-
+    font-weight: normal; /* or specify 'bold' if applicable */
+    font-style: normal; 
+  }
 /* .buttonDetailsText{
     border: 1px solid rgb(224, 223, 223);
     border-radius: 20px;
@@ -177,33 +173,31 @@ font-size: 20px;
 
 
 
-.buttonDetailsText {
+.buttonDetailsText{
     border: 1px solid rgb(224, 223, 223);
     border-radius: 20px;
-    padding: 5px 14px;
+    padding: 5px 12px;
     /* font-size: 18px; */
     color: #000;
     text-transform: uppercase;
-
-
+    font-weight: 500;
+    font-family: 'ABCMonumentGroteskRegular' , 'serif';
 }
 
-.buttonDetailsText:hover {
+.buttonDetailsText:hover{
     background-color: #000;
     color: white;
 }
 
-
 @media only screen and (max-width: 3901px) and (min-width: 901px) {
-    .buttonDetailsText {
+    .buttonDetailsText{
         border: 1px solid rgb(224, 223, 223);
         border-radius: 20px;
-        /* padding: 8px 14px; */
+        padding: 5px 14px;
         font-size: 15px;
         color: #000;
         text-transform: uppercase;
         font-weight: 500;
-
     }
     .imageDetails{
         color: #6a7176 !important;
@@ -217,19 +211,15 @@ font-size: 20px;
     
     }
 }
-
 @media only screen and (max-width: 900px) and (min-width: 0px) {
-    .buttonDetailsText {
+    .buttonDetailsText{
         border: 1px solid rgb(224, 223, 223);
         border-radius: 20px;
-        /* padding: 8px 14px; */
-        font-size: 10px;
+        padding: 7px 14px;
+        font-size:14px;
         color: #000;
         text-transform: uppercase;
-
-        font-family: "Crimson Text", serif;
-        font-weight: 400;
-        font-style: normal;
+        font-weight: 500;
     }
     .imageDetails{
         color: #6a7176 !important;
@@ -243,179 +233,256 @@ font-size: 20px;
     
     
     }
-
 }
 
-.detailsTitle {
+.detailsTitle{
     color: #000 !important;
-    font-family: 'Text' , serif;
+    font-family: 'Text', 'serif';
     font-weight: 500;
     margin-top: 10px;
-    width: 53%;
+    width: 53%; 
     line-height: 1;
     margin-bottom: 10px;
     letter-spacing: -.04em;
 
-
+   
 }
 
 @media only screen and (max-width: 900px) and (min-width: 0px) {
-    .detailsTitle {
+    .detailsTitle{
         color: #000 !important;
        
-        
+        font-weight: 500;
         margin-top: 10px;
-        width: 100%;
+        width: 100%; 
         line-height: 1;
         margin-bottom: 10px;
-
-
+        font-size: 2.25rem;
+    
+       
     }
 }
 
 @media only screen and (max-width: 3901px) and (min-width: 901px) {
-    .detailsTitle {
+    .detailsTitle{
         color: #000 !important;
-      
-       
+      font-size: 55px;
+        font-weight: 500;
         margin-top: 10px;
-        width: 50%;
+        width: 50%; 
         line-height: 1;
         margin-bottom: 10px;
-        font-size: 60px;
-
-
+    
+       
     }
+    .dateDetails{
+        color: #000 !important;
+        font-family: Light, serif;
+        font-weight: 600;
+        font-size: 14px;
+    }
+    
 }
 
-.shareText {
+.shareText{
     color: #000 !important;
-    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+     font-family: 'ABCMonumentGroteskRegular', serif; 
     font-weight: 100;
     margin-top: 15px;
     margin-bottom: 15px;
     margin-left: 4px;
     font-size: 1.3em;
-
+   
     width: 100%;
     letter-spacing: -.03em;
 
 }
 
 @media only screen and (max-width: 900px) and (min-width: 0px) {
-    .shareText {
+    .shareText{
         color: #000 !important;
-        font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
-        font-weight: 100;
+        
         margin-top: 15px;
         margin-bottom: 15px;
         margin-left: 4px;
         font-size: 1.3em;
-
+       
         width: 100%;
         letter-spacing: -.03em;
-        text-align: center;
-
+        
+    
     }
+    .dateDetails{
+        color: #000 !important;
+        font-family: Light, serif;
+        font-weight: 600;
+        font-size: 14px;
+        margin-top: 14px;
+        margin-bottom: 36px;
+    }
+    
 }
 
 
 
 
-.dateDetails {
+.dateDetails{
     color: #000 !important;
-    font-family: "Crimson Text", serif;
-    font-weight: 400;
-    font-style: normal;
+    font-family: Light, serif;
+  
 }
 
-.imageDetails {
-    width: 100%;
-    /* Responsive width for smaller screens */
+.imageDetails{
+    width: 100%; /* Responsive width for smaller screens */
     border-radius: 20px;
 }
 
-.descriptionTitle {
-    color: #000 !important;
-    font-family: Light;
-    font-weight: 500;
+.descriptionTitle{
+    /* color: #000 !important;
+    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
+    font-weight: 100;
     margin-top: 30px;
-    line-height: 1.4em;
+    width: 100%;  */
+    color: #444444 !important;
+    font-family: "Light", serif;
+  font-weight: 300;
+  font-style: normal;
+    margin-top: 30px;
     /* width: 100%;  */
 
+   
 }
 
 @media only screen and (max-width: 900px) and (min-width: 0px) {
-    .descriptionTitle {
-        color: #000 !important;
-       
+    .descriptionTitle{
+        
+   
+        /* margin-top: 30px;
+     
+        width: 100%;
+        font-size: 24px; */
+
+
+        /* margin-top: 2rem; */
+    /* margin-bottom: 2rem; */
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    font-weight: 300;
+    line-height: 160%;
+    letter-spacing: -.03em;
+    --tw-text-opacity: 1;
+    color: #444;
+    color: rgba(68, 68, 68, var(--tw-text-opacity));
+
+
+
+
+    }
+    .image2Img{
+        margin-top: 30px;
+    }
+}
+
+@media only screen and (max-width: 3901px) and (min-width: 901px) {
+    .descriptionTitle{
+        /* color: #000 !important; */
+        /* font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif; */
       
         margin-top: 30px;
         /* width: 100%;  */
-        width: 100%;
-    }
-}
-
-@media only screen and (max-width: 3901px) and (min-width: 901px) {
-    .descriptionTitle {
-        color: #000 !important;
-       
-       
-        margin-top: 30px;
-        /* width: 100%;  */
         width: 50%;
-        font-size: 22px;
+        font-size: 21px;
     }
 }
 
 
 
-.UnderlineText,
-.UnderlineText2 {
+/* .UnderlineText, .UnderlineText2{
     text-decoration: underline;
     text-decoration-thickness: 2px;
     text-underline-offset: 2px;
-    color: #000;
+    color: #444;
     padding-bottom: 20px;
     font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
 
+} */
+.UnderlineText{
+   
+    text-decoration-thickness: 2px;
+    text-underline-offset: 2px;
+    color: black;
+    padding-bottom: 20px;
+    font-family: 'Text', serif;
+    font-weight: 600;
+
 }
+.UnderlineText span{
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 2px;
+    color: black;
+    padding-bottom: 20px;
+    font-family: 'Text', serif;
+    font-weight: 600;
+   
+    
 
+}
+.UnderlineText2{
+   
+    text-decoration-thickness: 2px;
+    text-underline-offset: 2px;
+    color: #6A7176;
+    padding-bottom: 20px;
+    font-family: 'ABCMonumentGroteskRegular', serif;
+    margin-top: 10px;
+    /* font-weight: 500; */
+  
+
+
+}
 @media only screen and (max-width: 3901px) and (min-width: 901px) {
-
-    .UnderlineText,
-    .UnderlineText2 {
-        font-size: 20px;
+    .UnderlineText{ 
+        font-size: 1.145rem;
+        width: 50%;
+    }
+    .UnderlineText2{
+        font-size: 0.95rem;
         width: 50%;
     }
 }
 
 @media only screen and (max-width: 900px) and (min-width: 0px) {
-
-    .UnderlineText,
-    .UnderlineText2 {
-        font-size: 13px;
+    .UnderlineText{
+       
         width: 100%;
+        font-size: 1.15rem;
+        line-height: 1.75rem;
+    }
+    .UnderlineText2{
+        width: 100%;
+        font-size: 0.85rem;
+        line-height: 1.75rem;
     }
 }
 
-.buttonicon {
+.buttonicon{
     border: 1.3px solid rgb(179, 176, 176);
     padding: 10px;
     border-radius: 16px;
     color: black;
 }
 
-.buttonicon:hover {
+.buttonicon:hover{
     background-color: #000;
     color: white;
 }
 
-.icon {
+.icon{
     font-size: 20px;
 }
 
-.buttoncontenet {
+.buttoncontenet{
     border: 1.7px solid rgb(12, 12, 12);
     padding: 5px 13px;
     border-radius: 20px;
@@ -424,123 +491,7 @@ font-size: 20px;
     font-weight: 500;
 }
 
-.buttoncontenet:hover {
+.buttoncontenet:hover{
     background-color: #000;
     color: white;
 }
-
-
-
-
-.Layout2 {
-    display: flex;
-    margin: 0px 2em;
-    justify-content: space-between;
-    align-items: center;
-
-}
-
-
-.Layout2Box {
-    margin: 0px 2em 4em 2em;
-}
-
-@media only screen and (max-width: 900px) and (min-width: 0px) {
-    .Layout2Box {
-        margin: 0px 0.9em;
-    }
-    .Layout2text {
-        /* font-size: 5em; */
-        color: #000 !important;
-    
-        font-family: Rhymes Display;
-        font-size: 2em !important;
-        font-weight: 200;
-        letter-spacing: -.04em;
-    }
-    .layout2con {
-        padding: 0px 10px;
-      }
-}
-
-.layout2con {
-    /* margin: 0px 10px; */
-    padding: 0px 10px;
-  }
-  
-
-  .imageLayout2 {
-    border-radius: 20px;
-  }
-
-  .Layout2Boxbutton {
-    margin-top: 18px;
-    border: 1px solid rgb(224, 223, 223);
-    border-radius: 20px;
-    padding: 5px 15px;
-    font-size: 13px;
-    color: #000;
-    text-transform: uppercase;
-  
-  
-  }
-
-
-.Layout2imageText {
-    color: #000 !important;
-    font-family: Rhymes Display, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
-    font-weight: 500;
-    margin-top: 10px;
-    margin-left: 4px;
-  
-  }
-  
-  @media (min-width: 240px) {
-    .Layout2imageText {
-      font-size: 28px;
-      color: green;
-      /* Font size for small screens (640px and up) */
-    }
-  }
-  
-  
-  @media (min-width: 640px) {
-    .Layout2imageText {
-      font-size: 28px;
-      color: red;
-      /* Font size for small screens (640px and up) */
-    }
-  }
-  
-  @media (min-width: 768px) {
-    .Layout2imageText {
-      font-size: 22px;
-      color: pink;
-      /* Font size for medium screens (768px and up) */
-    }
-  }
-  
-  @media (min-width: 1024px) {
-    .Layout2imageText {
-      font-size: 30px;
-      color: blue;
-  
-    }
-  }
-
-
-
-.Layout2text {
-    /* font-size: 5em; */
-    color: #000 !important;
-
-    font-family: Rhymes Display;
-    font-size: 4em;
-    font-weight: 200;
-    letter-spacing: -.04em;
-}
-
-
-
-
-
