--- a/src/app/view/Fashion/fashion.module.css
+++ b/src/app/view/Fashion/fashion.module.css
@@ -214,6 +214,8 @@
 
 .navmenu{
   display: inline-block;
+  color: #000;
+  font-family: 'ABCMonumentGroteskRegular', serif ;
 }
 .navmenu:hover{
   border-bottom: 1px solid black;
@@ -222,12 +224,16 @@
 .navmenu2{
   display: inline-block;
   font-size: 13px;
+  color: #000;
+  font-family: 'ABCMonumentGroteskRegular', serif ;
 }
 .navmenu:hover{
   border-bottom: 1px solid black;
 }
 .follow{
   font-size: 11px;
+  color: #000;
+  font-family: 'ABCMonumentGroteskRegular', serif ;
 }
 
 @media only screen and (max-width: 900px) and (min-width: 0px) {
