--- a/src/app/view/Search/search.module.css
+++ b/src/app/view/Search/search.module.css
@@ -326,6 +326,7 @@
 
 .navmenu{
   display: inline-block;
+  color:black
 }
 .navmenu:hover{
   border-bottom: 1px solid black;
@@ -333,12 +334,14 @@
 .navmenu2{
   display: inline-block;
   font-size: 13px;
+  color: #000;
 }
 .navmenu:hover{
   border-bottom: 1px solid black;
 }
 .follow{
   font-size: 11px;
+  color: black;
 }
 
 @media only screen and (max-width: 900px) and (min-width: 0px) {
